fix: demo navbar & refactor nav visible

--- a/client/app/theme/navbar.less
+++ b/client/app/theme/navbar.less
@@ -239,6 +239,9 @@
   &.home {
     .bud-navbar(#FFFFFF,@gray);
   }
+  &.hide {
+    display: none;
+  }
 }
 
 .main-nav{
